[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/Parallax.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Transition.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/Kenney Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/boxs/titlescreen.png" type="Texture" id=4]
[ext_resource path="res://assets/buttons/titlescreen/intensidad-press.png" type="Texture" id=5]
[ext_resource path="res://assets/buttons/titlescreen/duration-basic.png" type="Texture" id=6]
[ext_resource path="res://assets/buttons/titlescreen/04b.png" type="Texture" id=7]
[ext_resource path="res://assets/buttons/titlescreen/duracion-press.png" type="Texture" id=8]
[ext_resource path="res://assets/buttons/titlescreen/intensidad-basic.png" type="Texture" id=9]
[ext_resource path="res://assets/buttons/titlescreen/04p.png" type="Texture" id=10]
[ext_resource path="res://scripts/TitleScreen.gd" type="Script" id=13]

[sub_resource type="DynamicFont" id=1]
size = 50
extra_spacing_space = 5
font_data = ExtResource( 3 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Parallax" parent="." instance=ExtResource( 1 )]

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_right = 160.0
margin_bottom = 40.0
rect_min_size = Vector2( 1040, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin1" type="MarginContainer" parent="VBox"]
margin_right = 1040.0
margin_bottom = 180.0
rect_min_size = Vector2( 1040, 180 )

[node name="Title" type="Label" parent="VBox/Margin1"]
margin_left = 98.0
margin_top = 52.0
margin_right = 941.0
margin_bottom = 128.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.85098, 0.282353, 1 )
custom_colors/font_color_shadow = Color( 0.607843, 0.482353, 0.00784314, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "HABILIDADES BASICAS"
align = 1
valign = 1

[node name="Margin2" type="MarginContainer" parent="VBox"]
margin_top = 184.0
margin_right = 1040.0
margin_bottom = 776.0
rect_min_size = Vector2( 1040, 0 )

[node name="Background" type="TextureRect" parent="VBox/Margin2"]
margin_left = 235.0
margin_right = 805.0
margin_bottom = 592.0
rect_min_size = Vector2( 570, 592 )
size_flags_horizontal = 4
texture = ExtResource( 4 )

[node name="VBox" type="VBoxContainer" parent="VBox/Margin2"]
margin_left = 295.0
margin_top = 61.0
margin_right = 745.0
margin_bottom = 531.0
rect_min_size = Vector2( 450, 470 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Margin2" type="MarginContainer" parent="VBox/Margin2/VBox"]
margin_right = 450.0
margin_bottom = 85.0
rect_min_size = Vector2( 450, 85 )

[node name="Nivel2" type="TextureButton" parent="VBox/Margin2/VBox/Margin2"]
margin_top = 14.0
margin_right = 450.0
margin_bottom = 71.0
rect_min_size = Vector2( 450, 57 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 5 )
expand = true
stretch_mode = 3

[node name="Margin3" type="MarginContainer" parent="VBox/Margin2/VBox"]
margin_top = 89.0
margin_right = 450.0
margin_bottom = 174.0
rect_min_size = Vector2( 450, 85 )

[node name="Nivel3" type="TextureButton" parent="VBox/Margin2/VBox/Margin3"]
margin_top = 14.0
margin_right = 450.0
margin_bottom = 71.0
rect_min_size = Vector2( 450, 57 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
expand = true
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="VBox/Margin2/VBox"]
margin_top = 178.0
margin_right = 450.0
margin_bottom = 263.0
rect_min_size = Vector2( 450, 85 )

[node name="Margin4" type="MarginContainer" parent="VBox/Margin2/VBox"]
margin_top = 267.0
margin_right = 450.0
margin_bottom = 352.0
rect_min_size = Vector2( 450, 85 )

[node name="Credits" type="TextureButton" parent="VBox/Margin2/VBox/Margin4"]
margin_top = 14.0
margin_right = 450.0
margin_bottom = 71.0
rect_min_size = Vector2( 450, 57 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 10 )
expand = true
stretch_mode = 3

[node name="Transition" parent="." instance=ExtResource( 2 )]
[connection signal="pressed" from="VBox/Margin2/VBox/Margin2/Nivel2" to="." method="_on_Nivel2_pressed"]
[connection signal="pressed" from="VBox/Margin2/VBox/Margin3/Nivel3" to="." method="_on_Nivel3_pressed"]
[connection signal="pressed" from="VBox/Margin2/VBox/Margin4/Credits" to="." method="_on_Credits_pressed"]
